main/default/objects/Cart__c/Cart__c.object-meta.xml
<CustomObject>
    <description>Tracks items a customer selects, including status and total amount.</description>
    <label>Carts</label>
    <nameField>
        <displayFormat>Cart-{000}</displayFormat>
        <label>Cart No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>