main/default/objects/Cart__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the cart to the customer’s account for tracking purchases.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>