main/default/objects/Cart__c/fields/Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Activity</label>
    <referenceTo>Engagement_Activity__c</referenceTo>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>