main/default/objects/Cart__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Stores the name or details of the item added to the cart.</description>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>