main/default/objects/Cart__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the cart&apos;s state, such as Abandoned or Purchased.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>