main/default/objects/Cart__c/listViews/Cart.listView-meta.xml
<ListView>
    <fullName>Cart</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Engagement_Activity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Cart</label>
</ListView>